amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.1-beta2:
  ADD: Custom Smart Playlists with built-in editor.
  ADD: Systray icon shows track progress and play status.
  CHG: Imported SQLite3 and ported CollectionDB.
  ADD: "Cool-Streams", a list of amaroK Squad recommended streams for
       playlist-browser.
  ADD: Detecting Sampler/VA discs in CollectionBrowser (shown as
       "Various Artists"). (BR 81683)
  ADD: Configuration GUI for xine-engine.
  ADD: Next and previous track buttons for Tag-Editor.
  ADD: Player-window adapts to current color scheme.
  ADD: Crossfading and fade-in/out function for GStreamer-Engine.
  ADD: Genre and Favorite Tracks by Artist smart playlist in the
       Playlist-Browser.
  FIX: Don't crossfade, if we're playing the very next tack of the same
       album. (BR 77766)
  ADD: IMMS-like rating system for songs.
  FIX: aRts-engine has been ported to the new engine interface and is
       available again (but not recommended).
  FIX: Try to autodetect Sampler-Discs and show them properly in the
       Contextbrowser. (BR 87182)
  FIX: Multiple items can now be selected in the CoverManager.
       Thanks John Hughes (BR 87584)
  FIX: Various fixes for certain Artist/Album names, which had problems
       with cover support.
  FIX: Sorting the collection is now case-insensitive. (BR 84141)
  CHG: Symlink infinite recursion check for collection scan.
  FIX: Show all accessible cover images in the tooltip. (BR 87283)
  FIX: Clicking an album in the ContextBrowser adds items in the correct
       order, now. (BR 87733)

VERSION 1.1-beta1:
  ADD: Wizard for configuring amaroK on first startup.
  CHG: Made it possible to use the next/previous buttons when amaroK is
       not playing.
  ADD: DCOP call to switch Random Mode on or off. (BR 84460)
  ADD: DCOP call to retrieve current track's cover image. (BR 85364)
  FIX: Problem with cover-saving for certain artist/album names. (BR 84171)